[package]
name = "log-reroute"
edition = "2018"
version = "0.1.4"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "Support to change logging target for the log crate"
documentation = "https://docs.rs/log-reroute"
repository = "https://github.com/vorner/log-reroute"
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
license = "Apache-2.0/MIT"

[badges]
travis-ci = { repository = "vorner/log-reroute" }
maintenance = { status = "actively-developed" }

[dependencies]
arc-swap = "~0.4"
log = "~0.4"
once_cell = "~1"

[dev-dependencies]
fern = "~0.5"
version-sync = "~0.8"
tempfile = "~3"
